--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Recipe Finder</h1>
+        <h1>🍽️ Recipe Finder</h1>
         
         <!-- Dark Mode Toggle -->
-        <button id="darkModeToggle">Dark Mode</button>
-
-        <!-- Search Section for recipe -->
+        <label class="switch">
+            <input type="checkbox" id="darkModeToggle">
+            <span class="slider"></span>
+        </label>
+        
+        <!-- Search Section -->
         <div class="search-box">
             <input type="text" id="ingredientInput" placeholder="Enter ingredients (e.g., chicken)">
             <button id="searchBtn">Search</button>
@@ -21,6 +24,7 @@
 
         <!-- Results Section -->
         <div id="recipeResults" class="results"></div>
+        <button id="backToSearch" class="hidden">🔼 Back to Search</button>
     </div>
 
     <script src="index.js"></script>
