--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <div class="container">
         <h1>🍽️ Recipe Finder</h1>
         
-        <!-- Dark Mode Toggle -->
         <label class="switch">
             <input type="checkbox" id="darkModeToggle">
             <span class="slider"></span>
         </label>
         
-        <!-- Search Section -->
         <div class="search-box">
             <input type="text" id="ingredientInput" placeholder="Enter ingredients (e.g., chicken)">
             <button id="searchBtn">Search</button>
         </div>
 
-        <!-- Results Section -->
         <div id="recipeResults" class="results"></div>
         <button id="backToSearch" class="hidden">🔼 Back to Search</button>
+
+        <h2>⭐ My Saved Recipes</h2>
+        <div id="savedRecipes" class="results"></div>
     </div>
 
     <script src="index.js"></script>
